# hottenrott-et-al-2022

./: CMakeLists.txt  LICENSE  LICENSE.md  Readme.md  aux_node.hpp  bandp.hpp  branching.hpp  initial_solution.hpp  instance_list.hpp  instance_reader.hpp  main.cpp  master_problem.hpp  mip_ub_solver.hpp  node_solver.hpp  output_writer.hpp  preprocess_scenario.hpp  preprocessing.hpp  route_finder.hpp
